<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/entername"
        android:textColor="@color/violet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textCapWords|textPersonName" >
		
        <requestFocus />
    </EditText>
    
     <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/enterusername"
        android:textColor="@color/green"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textCapWords|textPersonName" >
		
    
    </EditText>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/gender"
        android:textColor="@color/blue"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center"
    android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageButton1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/male"
            />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/female" />
        
	</LinearLayout>    
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:layout_height="30dp"
    android:orientation="horizontal" >

        
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:onClick="onclickrb1"
            android:layout_height="wrap_content"
           
             />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:onClick="onclickrb2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
             />
        
	</LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onclicksubmit"
        android:text="@string/submit"
        android:background="#eeeeee" />

</LinearLayout>
</ScrollView>