<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/newplayer1"
            android:textColor="@color/green"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/larger" />
        
         <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/newplayer2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue"
            android:textSize="@dimen/larger" />

         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:background="@color/white"
             android:textColor="@color/white"
             android:text="@string/clickme" />

         <Button
             android:id="@+id/button2"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:onClick="onclick_newplayer"
             android:background="#eeeeee"
             android:text="@string/clickme" />
         
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:background="@color/white"
             android:textColor="@color/white"
             android:text="@string/clickme" />
         
         <Button
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:background="@color/white"
             android:textColor="@color/white"
             android:text="@string/clickme" />
        
         
         <Button
             android:id="@+id/button4"
             android:layout_width="310dp"
             android:background="#eeeeee"
             android:onClick="onclickcurrentplayers"
             android:layout_height="wrap_content"
             android:text="@string/othersclickme" />       
             
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:background="@color/white"
             android:textColor="@color/white"
             android:text="@string/clickme" />
         
         
         
    </LinearLayout>

</ScrollView>