<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="wrap_content" >
		
       <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        
            android:textAppearance="?android:attr/textAppearanceLarge" 
            
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:onClick="onclicknewgame"
            android:text="@string/newgame"
            android:layout_marginRight="25dp"
            android:textColor="@color/green"
            android:textSize="@dimen/dp45"
            android:textStyle="bold"
            
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_marginLeft="20dp"
            android:layout_marginTop="36dp"
            android:background="@color/white"
            android:onClick="onclickplayerprofiles"
            android:text="@string/player_profiles"
            android:textColor="@color/blue"
            android:textSize="@dimen/dp30"
            android:textStyle="bold"
            
            />
        
        <Button
            android:id="@+id/buttonscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="30dp"           
            android:layout_marginRight="40dp" 
            android:onClick="onclickhighscore"
            android:text="High Scores"
            android:textColor="@color/b11"
            android:textSize="@dimen/dp30"
            android:textStyle="bold"
            
             />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dp"           
            android:layout_marginLeft="20dp" 
            android:onClick="onclickoptions"
            android:text="@string/options"
            android:textColor="@color/red"
            android:textSize="@dimen/dp30"
            android:textStyle="bold"
            
             />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"            
            android:onClick="onclickquit"
            android:text="@string/exit"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/violet"
            android:textSize="@dimen/large"
            android:textStyle="bold" 
            
            />
	
    </LinearLayout>
    

</ScrollView>